# vc

./: .env.example  .gitignore  MIGRATIONS.md  PRD.md  README.md  SETUP.md  STATUS.md  package.json  pnpm-lock.yaml
apps/desktop/: BUILD.md  index.html  overlay.html  package.json
apps/desktop/src/: main.ts  overlay.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: create-icon.ps1  icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/lib/: api.ts  refine.ts  stt.ts  supabase.ts  types.ts
apps/web/: package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/refine/: route.ts
apps/web/app/api/stt/token/: route.ts
apps/web/app/auth/login/: page.tsx
apps/web/app/auth/signup/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/dashboard/profiles/: actions.ts  page.tsx
apps/web/app/dashboard/profiles/[id]/edit/: page.tsx
apps/web/app/dashboard/profiles/new/: page.tsx
apps/web/components/: LogoutButton.tsx  ProfileCard.tsx  ProfileForm.tsx
apps/web/lib/api/: profiles.ts
apps/web/lib/supabase/: middleware.ts
apps/web/lib/types/: database.ts
scripts/: apply-migrations.mjs  run-migrations.mjs
supabase/: config.toml  seed.sql
supabase/migrations/: 20260115000001_init.sql  20260115000002_rls.sql  20260115000003_usage.sql
