[package]
name = "vochat-desktop"
version = "0.1.0"
description = "VoChat Desktop - Voice to Text AI Companion"
authors = ["VoChat Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
